--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@ footer {
     background: #8b8b8b;
 }
 footer div.inner {
-    padding: 40px 50px 80px;
+    padding: 40px 50pxcd 80px;
     color: #fff;
 }
 footer div.inner ul {
