--- a/css/title.css
+++ b/css/title.css
@@ -23,8 +23,8 @@
     width: 200px;
     height:54px;
     font-size: 0;
-    padding-top: 5.36%;
     background: url('../assets/img/btn-upload.png') no-repeat center / contain;
-    bottom: 20px;
+    bottom: 60px;
     left: calc(50% - 100px);
+    cursor: pointer;
 }
