--- a/css/upload.css
+++ b/css/upload.css
@@ -218,7 +218,7 @@ main div.inner div.ContentWrap div.contentPlace div.wrap div.inputPlace div.cont
     position: absolute;
     width: 20px;
     height: 20px;
-    background: red;
+    background: crimson;
     color:#fff;
     font-size: 12px;
     border-radius: 10px;
